feat: Implement AppException classes for error handling
feat: Add ApiConfig class for centralized API endpoint management

feat: Create ApiService for handling API requests with connectivity checks and error handling

feat: Develop NotificationService for managing local and remote notifications

feat: Introduce StorageService for managing shared preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   google_maps_flutter: ^2.12.3
   image_picker: ^1.1.2
   country_picker: ^2.0.27
+  shared_preferences: ^2.5.3
+  connectivity_plus: ^6.1.5
+  firebase_core: ^4.0.0
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
