--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   connectivity_plus: ^6.1.5
   firebase_core: ^4.0.0
   http: ^1.5.0
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
