--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^1.5.0
   permission_handler: ^12.0.1
   geolocator: ^14.0.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
