--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   permission_handler: ^12.0.1
   geolocator: ^14.0.2
   cached_network_image: ^3.4.1
+  intl: ^0.20.2
+  flutter_stripe: ^12.0.2
 
 dev_dependencies:
   flutter_test:
